# rust-bitstruct

./: Cargo.toml  README.md
bitstruct/: Cargo.toml
bitstruct/src/: lib.rs
bitstruct/tests/: tests.rs
bitstruct/tests/ui/: bits_larger_than_raw.rs  bits_larger_than_raw.stderr  bits_larger_than_target.rs  bits_larger_than_target.stderr  empty_bits.rs  empty_bits.stderr  invalid_raw.rs  invalid_raw.stderr  msb_before_lsb.rs  msb_before_lsb.stderr  omit_setter.rs  omit_setter.stderr
bitstruct_derive/: Cargo.toml
bitstruct_derive/src/: lib.rs
